--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -32,7 +32,6 @@
 
   <Callout type={'info'}>Please make sure to save your client secret as this is your only chance to view it.</Callout>
 
-
   ### Add Users
 
   Go back to the "Microsoft Entra ID" interface, enter "Users", click on "New user", fill in the user information, and click on "Create" to create a user for using LobeChat.
@@ -41,18 +40,18 @@
 
   When deploying LobeChat, you need to configure the following environment variables:
 
-| Environment Variable     | Type     | Description                                                                                                                                                                                                                |
-| ------------------------ | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `ENABLE_OAUTH_SSO`       | Required | Enable single sign-on (SSO) for LobeChat. Set to `1` to enable single sign-on.                                                                                                                                             |
-| `NEXTAUTH_SECRET`        | Required | Key used to encrypt Auth.js session tokens. You can generate the key using the following command: `openssl rand -base64 32`                                                                                                |
-| `SSO_PROVIDERS`          | Required | Select the single sign-on provider for LoboChat. Use `azure-ad` for Microsoft Entra ID.                                                                                                                                    |  |
-| `AZURE_AD_CLIENT_ID`     | Required | Client ID of the Microsoft Entra ID application.                                                                                                                                                                           |
-| `AZURE_AD_CLIENT_SECRET` | Required | Client Secret of the Microsoft Entra ID application.                                                                                                                                                                       |
-| `AZURE_AD_TENANT_ID`     | Required | Tenant ID of the Microsoft Entra ID application.                                                                                                                                                                           |
-| `ACCESS_CODE`            | Required | Add a password for accessing this service, you can set a sufficiently long random password to "disable" access code authorization.                                                                                         |
-| `NEXTAUTH_URL`           | Optional | This URL is used to specify the callback address for Auth.js when performing OAuth authentication. It is only necessary to set it when the default generated redirect address is incorrect. `https://example.com/api/auth` |
+  | Environment Variable     | Type     | Description                                                                                                                                                                                                                |   |
+  | ------------------------ | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | - |
+  | `ENABLE_OAUTH_SSO`       | Required | Enable single sign-on (SSO) for LobeChat. Set to `1` to enable single sign-on.                                                                                                                                             |   |
+  | `NEXTAUTH_SECRET`        | Required | Key used to encrypt Auth.js session tokens. You can generate the key using the following command: `openssl rand -base64 32`                                                                                                |   |
+  | `SSO_PROVIDERS`          | Required | Select the single sign-on provider for LoboChat. Use `azure-ad` for Microsoft Entra ID.                                                                                                                                    |   |
+  | `AZURE_AD_CLIENT_ID`     | Required | Client ID of the Microsoft Entra ID application.                                                                                                                                                                           |   |
+  | `AZURE_AD_CLIENT_SECRET` | Required | Client Secret of the Microsoft Entra ID application.                                                                                                                                                                       |   |
+  | `AZURE_AD_TENANT_ID`     | Required | Tenant ID of the Microsoft Entra ID application.                                                                                                                                                                           |   |
+  | `ACCESS_CODE`            | Required | Add a password for accessing this service, you can set a sufficiently long random password to "disable" access code authorization.                                                                                         |   |
+  | `NEXTAUTH_URL`           | Optional | This URL is used to specify the callback address for Auth.js when performing OAuth authentication. It is only necessary to set it when the default generated redirect address is incorrect. `https://example.com/api/auth` |   |
 
-<Callout type={'info'}>You can refer to [📘 environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
+  <Callout type={'info'}>You can refer to [📘 environment variables](/en/self-hosting/environment-variable#microsoft-entra-id) for details on related variables.</Callout>
 </Steps>
 
 <Callout>After successful deployment, users will be able to authenticate and use LobeChat using the users configured in Microsoft Entra ID.</Callout>
@@ -65,7 +64,6 @@ Please explore further in the [Microsoft Entra ID Learning Center][microsoft-lea
 
 - [Quickstart: Register an app][microsoft-entra-register-app]
 
-[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
-[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
 [microsoft-azure-portal]: https://portal.azure.com/
-[microsoft-entra-id]: https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id
+[microsoft-entra-register-app]: https://learn.microsoft.com/en-us/entra/identity-platform/quickstart-register-app
+[microsoft-learn-entra]: https://learn.microsoft.com/en-us/entra/identity/
