--- a/docs/usage/providers/groq.mdx
+++ b/docs/usage/providers/groq.mdx
@@ -3,7 +3,7 @@ title: Using Groq in LobeChat
 image: https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
 ---
 
-import { Callout, Steps, Tabs } from 'nextra/components';
+import { Callout, Steps } from 'nextra/components';
 
 # Using Groq in LobeChat
 
@@ -22,23 +22,23 @@ This document will guide you on how to use Groq in LobeChat:
 
   First, you need to obtain an API Key from the [GroqCloud Console](https://console.groq.com/).
 
-  <Image alt={'Get GroqCloud API Key'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/6942287e-fbb1-4a10-a1ce-caaa6663da1e'} width={832} />
+  <Image alt={'Get GroqCloud API Key'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/6942287e-fbb1-4a10-a1ce-caaa6663da1e'} />
 
   Create an API Key in the `API Keys` menu of the console.
 
-  <Image alt={'Save GroqCloud API Key'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/eb57ca57-4f45-4409-91ce-9fa9c7c626d6'} width={832} />
+  <Image alt={'Save GroqCloud API Key'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/eb57ca57-4f45-4409-91ce-9fa9c7c626d6'} />
 
-  Safely store the key from the pop-up as it will only appear once. If you accidentally lose it, you will need to create a new key.
-
+  <Callout type={'warning'}>
+    Safely store the key from the pop-up as it will only appear once. If you accidentally lose it, you will need to create a new key.
+  </Callout>
 
   ### Configure Groq in LobeChat
 
   You can find the Groq configuration option in `Settings` -> `Language Model`, where you can input the API Key you just obtained.
 
-  <Image alt={'Groq service provider settings'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/88948a3a-6681-4a8d-9734-a464e09e4957'} width={832} />
-
+  <Image alt={'Groq service provider settings'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/88948a3a-6681-4a8d-9734-a464e09e4957'} />
 </Steps>
 
 Next, select a Groq-supported model in the assistant's model options, and you can experience the powerful performance of Groq in LobeChat.
 
-<Image alt={'Select Groq model'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/c37190ee-b373-4c6f-8261-aa48e8d317e7'} width={832} />
+<Video alt={'Select and use Groq model'} src="https://github.com/lobehub/lobe-chat/assets/28616219/b6b8226b-183f-4249-8255-663a5e9f5af4" />
