--- a/docs/usage/providers/groq.zh-CN.mdx
+++ b/docs/usage/providers/groq.zh-CN.mdx
@@ -3,8 +3,6 @@ title: 在 LobeChat 中使用 Groq
 image: https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
 ---
 
-import { Callout, Steps, Tabs } from 'nextra/components';
-
 # 在 LobeChat 中使用 Groq
 
 <Image alt={'在 LobeChat 中使用 Groq'} cover src={'https://github.com/lobehub/lobe-chat/assets/34400653/d0d08d98-a8d2-4b97-97c0-24a4f01d7eac'} />
@@ -22,23 +20,23 @@ Groq 的 [LPU 推理引擎](https://wow.groq.com/news_press/groq-lpu-inference-e
 
   首先，你需要到 [GroqCloud Console](https://console.groq.com/) 中获取一个 API Key。
 
-  <Image alt={'获取 GroqCloud API Key'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/6942287e-fbb1-4a10-a1ce-caaa6663da1e'} width={832} />
+  <Image alt={'获取 GroqCloud API Key'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/6942287e-fbb1-4a10-a1ce-caaa6663da1e'} />
 
   在控制台的 `API Keys` 菜单中创建一个 API Key。
 
-  <Image alt={'保存 GroqCloud API Key'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/eb57ca57-4f45-4409-91ce-9fa9c7c626d6'} width={832} />
+  <Image alt={'保存 GroqCloud API Key'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/eb57ca57-4f45-4409-91ce-9fa9c7c626d6'} />
 
-  妥善保存弹窗中的 key，它只会出现一次，如果不小心丢失了，你需要重新创建一个 key。
-
+  <Callout type={'warning'}>
+    妥善保存弹窗中的 key，它只会出现一次，如果不小心丢失了，你需要重新创建一个 key。
+  </Callout>
 
   ### 在 LobeChat 中配置 Groq
 
   你可以在 `设置` -> `语言模型` 中找到 Groq 的配置选项，将刚才获取的 API Key 填入。
 
-  <Image alt={'Groq 服务商设置'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/88948a3a-6681-4a8d-9734-a464e09e4957'} width={832} />
-
+  <Image alt={'Groq 服务商设置'} height={274} inStep src={'https://github.com/lobehub/lobe-chat/assets/34400653/88948a3a-6681-4a8d-9734-a464e09e4957'} />
 </Steps>
 
 接下来，在助手的模型选项中，选中一个 Groq 支持的模型，就可以在 LobeChat 中体验 Groq 强大的性能了。
 
-<Image alt={'选择 Groq 模型'} height={274} src={'https://github.com/lobehub/lobe-chat/assets/34400653/c37190ee-b373-4c6f-8261-aa48e8d317e7'} width={832} />
+<Video alt={'选择 Groq 模型'} src="https://github.com/lobehub/lobe-chat/assets/28616219/b6b8226b-183f-4249-8255-663a5e9f5af4" />
