--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -112,6 +112,7 @@
     "openai": "OpenAI",
     "openrouter": "OpenRouter",
     "perplexity": "Perplexity",
+    "zeroone": "01-AI",
     "zhipu": "Zhipu AI"
   },
   "noDescription": "No description available",
