--- a/locales/zh-CN/common.json
+++ b/locales/zh-CN/common.json
@@ -112,6 +112,7 @@
     "openai": "OpenAI",
     "openrouter": "OpenRouter",
     "perplexity": "Perplexity",
+    "zeroone": "零一万物",
     "zhipu": "智谱AI"
   },
   "noDescription": "暂无描述",
