--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -201,6 +201,14 @@
         "title": "API Key"
       }
     },
+    "ZeroOne": {
+      "title": "零一万物",
+      "token": {
+        "desc": "填入来自零一万物的 API Key",
+        "placeholder": "零一万物 API Key",
+        "title": "API Key"
+      }
+    },
     "Zhipu": {
       "title": "智谱",
       "token": {
